fix(color): adjust spacing for all colors shown up

--- a/src/styles/single-item-page/_single-item.scss
+++ b/src/styles/single-item-page/_single-item.scss
@@ -120,11 +120,7 @@
     display: flex;
 
     > div:not(:last-child) {
-      margin-right: 1rem;
-
-      @media only screen and (max-width: $bp-smallest) {
-        margin-right: 0.7rem;
-      }
+      margin-right: 0.6rem;
     }
 
     > div {
